修改select单选无选中状态

--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -178,6 +178,14 @@
         color: @disableColor;
         background: #fff;
       }
+
+      &-checked {
+        background: @tableItemSelectBackgroundColor;
+
+        &:hover {
+          background: @tableItemSelectBackgroundColor;
+        }
+      }
     }
   }
 
