--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -13,6 +13,7 @@
   line-height: 16px;
   display: flex;
   align-items: center;
+  justify-content: center;
 
   .@{prefix}-icon {
     margin-right: 5px;
