--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -79,7 +79,7 @@
 }
 
 .@{prefix}-select {
-  position: absolute;
+  position: relative;
   z-index: 9999;
   background: #ffffff;
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
