增加步骤条组件

--- a/src/index.less
+++ b/src/index.less
@@ -4,6 +4,7 @@
 // 主题颜色
 // 主色
 @primaryColor: #5477ff;
+@primaryColorRgb: 84, 119, 255;
 // 主色-Hover状态
 @primaryColorHover: #7692ff;
 // 主色-Active状态
@@ -18,6 +19,7 @@
 @warningColor: #f97c14;
 // 错误
 @errorColor: #f5221b;
+@errorColorRgb: 245, 34, 27;
 // 禁用
 @disableColor: #d0d1d9;
 
@@ -49,7 +51,8 @@
 
 // 背景颜色
 // 导航栏背景色
-@navbarBackgroundColor: #15171f;
+@navbarBackgroundColor: #111628;
+@navbarBackgroundColorRgb: 17, 22, 40;
 // 整体页面背景色
 @mainackgroundColor: #f9fafe;
 // 模块背景色
