--- a/src/Timeline/index.less
+++ b/src/Timeline/index.less
@@ -1,4 +1,81 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-Timeline {
+  // width: 188px;
+  font-size: 14px;
+  .line {
+    width: 1px;
+    height: 32px;
+    background: #e9eaf2;
+    margin-left: 90px;
+  }
+  .con {
+    display: flex;
+    align-items: center;
+    .time {
+      width: 78px;
+      overflow: hidden;
+      text-align: right;
+    }
+    b {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      border: 2px solid #5477ff;
+      margin: 0 8px;
+    }
+    .title {
+      text-align: center;
+      text-decoration: none;
+    }
+  }
+}
+@import '../index.less';
+
+.@{prefix}-Timeline-row {
+  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+  .line {
+    width: 32px;
+    height: 1px;
+    background: #e9eaf2;
+    margin: 0;
+    margin-top: 30px;
+  }
+  .con {
+    display: block;
+    .time {
+      width: 98px;
+      margin: 0 auto;
+      padding: 0 10px;
+      justify-content: center;
+    }
+    div {
+      display: flex;
+      .radius {
+        width: 12px;
+        height: 8px;
+        border: 2px solid #5477ff;
+        margin: 8px 0;
+        border-radius: 50%;
+      }
+      span {
+        width: 100%;
+        height: 1px;
+        margin: 12px 0;
+        background: #e9eaf2;
+      }
+      .line-left-first {
+        opacity: 0;
+      }
+      .line-right-last {
+        opacity: 0;
+      }
+    }
+    .title {
+      justify-content: center;
+      text-decoration: none;
+    }
+  }
 }
