优化评分组件及时间轴组件

--- a/src/Timeline/index.less
+++ b/src/Timeline/index.less
@@ -1,81 +1,146 @@
 @import '../index.less';
 
-.@{prefix}-Timeline {
-  // width: 188px;
+.@{prefix}-timeline {
+  display: inline-block;
   font-size: 14px;
-  .line {
-    width: 1px;
-    height: 32px;
-    background: #e9eaf2;
-    margin-left: 90px;
-  }
-  .con {
+
+  &-item {
     display: flex;
-    align-items: center;
-    .time {
-      width: 78px;
+    padding: 9px 0;
+    position: relative;
+
+    &:first-child {
+      .@{prefix}-timeline-point {
+        .point {
+          &::after {
+            display: none;
+          }
+        }
+      }
+    }
+
+    &:last-child {
+      .@{prefix}-timeline-point {
+        .point {
+          &::before {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+
+  .@{prefix}-timeline-point {
+    position: relative;
+    margin: 0 8px;
+
+    .point {
+      width: 9px;
+      height: 9px;
+      border-radius: 50%;
+      border: 2px solid #5477ff;
+      box-sizing: border-box;
+
+      &:after {
+        content: '';
+        position: absolute;
+        background: #e9eaf2;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        background: #e9eaf2;
+      }
+    }
+  }
+
+  &-vertical {
+    display: flex;
+    flex-direction: column;
+
+    .@{prefix}-timeline-time {
       overflow: hidden;
       text-align: right;
     }
-    b {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      border: 2px solid #5477ff;
-      margin: 0 8px;
+
+    .@{prefix}-timeline-point {
+      .point {
+        &:after {
+          left: 4px;
+          top: -14px;
+          bottom: 9px;
+          width: 1px;
+        }
+
+        &::before {
+          left: 4px;
+          top: 9px;
+          bottom: -14px;
+          width: 1px;
+        }
+      }
     }
-    .title {
+
+    .@{prefix}-timeline-title {
       text-align: center;
       text-decoration: none;
     }
-  }
-}
-@import '../index.less';
 
-.@{prefix}-Timeline-row {
-  font-size: 14px;
-  display: flex;
-  flex-direction: row;
-  .line {
-    width: 32px;
-    height: 1px;
-    background: #e9eaf2;
-    margin: 0;
-    margin-top: 30px;
+    .@{prefix}-timeline-item {
+      flex-direction: row;
+      align-items: center;
+    }
   }
-  .con {
-    display: block;
-    .time {
-      width: 98px;
-      margin: 0 auto;
-      padding: 0 10px;
-      justify-content: center;
+
+  &-horizontal {
+    display: flex;
+    flex-direction: row;
+
+    .@{prefix}-timeline-time {
+      width: 78px;
+      overflow: hidden;
+      text-align: center;
     }
-    div {
-      display: flex;
-      .radius {
-        width: 12px;
-        height: 8px;
-        border: 2px solid #5477ff;
-        margin: 8px 0;
-        border-radius: 50%;
-      }
-      span {
-        width: 100%;
-        height: 1px;
-        margin: 12px 0;
-        background: #e9eaf2;
-      }
-      .line-left-first {
-        opacity: 0;
-      }
-      .line-right-last {
-        opacity: 0;
+
+    .@{prefix}-timeline-point {
+      width: 100%;
+      margin: 8px 0;
+      .point {
+        margin: 0 auto;
+
+        &:after {
+          top: 4px;
+          left: -16px;
+          right: calc(50% + 4px);
+          height: 1px;
+        }
+
+        &::before {
+          top: 4px;
+          left: calc(50% + 5px);
+          right: -16px;
+          height: 1px;
+        }
       }
     }
-    .title {
-      justify-content: center;
+
+    .@{prefix}-timeline-title {
+      text-align: center;
       text-decoration: none;
     }
+
+    .@{prefix}-timeline-item {
+      flex-direction: column;
+      align-items: center;
+      padding: 0 16px;
+    }
   }
 }
+
+// .line {
+//   width: 1px;
+//   height: 32px;
+//   background: #e9eaf2;
+//   margin-left: 90px;
+// }
