--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -26,14 +26,11 @@
   }
 
   &-content {
-    padding: 0 8px;
+    padding: 0 32px 0 8px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     flex: 1;
-    position: absolute;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     z-index: 10;
