增加自定义栅格支持响应式

--- a/src/index.less
+++ b/src/index.less
@@ -104,3 +104,27 @@
 @maskZIndex: 998;
 @modalZIndex: 999;
 @messageZIndex: 1098;
+
+// 手机端
+@screen-xs: 480px;
+@screen-xs-min: @screen-xs;
+
+// 平板竖屏
+@screen-sm: 576px;
+@screen-sm-min: @screen-sm;
+
+// 桌面
+@screen-md: 768px;
+@screen-md-min: @screen-md;
+
+// 宽桌面
+@screen-lg: 992px;
+@screen-lg-min: @screen-lg;
+
+// 全高清
+@screen-xl: 1200px;
+@screen-xl-min: @screen-xl;
+
+// 大桌面
+@screen-xxl: 1600px;
+@screen-xxl-min: @screen-xxl;
