--- a/src/Grid/index.less
+++ b/src/Grid/index.less
@@ -98,3 +98,25 @@
 }
 
 .make-grid();
+
+.make-grid(-xs);
+
+@media (min-width: @screen-sm-min) {
+  .make-grid(-sm);
+}
+
+@media (min-width: @screen-md-min) {
+  .make-grid(-md);
+}
+
+@media (min-width: @screen-lg-min) {
+  .make-grid(-lg);
+}
+
+@media (min-width: @screen-xl-min) {
+  .make-grid(-xl);
+}
+
+@media (min-width: @screen-xxl-min) {
+  .make-grid(-xxl);
+}
