小手可配置

--- a/src/Tag/index.less
+++ b/src/Tag/index.less
@@ -4,7 +4,6 @@
   width: auto;
   border-radius: 2px;
   padding: 4px 8px;
-  cursor: pointer;
   font-size: 12px;
   border: 1px solid;
   box-sizing: border-box;
@@ -76,5 +75,9 @@
     font-size: 12px;
   }
   &&-inline {
+  }
+  &-pointer,
+  &-close {
+    cursor: pointer;
   }
 }
