--- a/src/Popconfirm/index.less
+++ b/src/Popconfirm/index.less
@@ -123,6 +123,10 @@
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
   border-radius: 2px;
 
+  &-popup {
+    z-index: @modalZIndex + 200;
+  }
+
   &:after {
     position: absolute;
     left: 50%;
