--- a/src/Cascader/index.less
+++ b/src/Cascader/index.less
@@ -87,12 +87,8 @@
   }
 }
 
-.rootnet-design-popup {
-  // popup
+.@{prefix}-popup {
   .@{prefix}-cascader-menus {
-    // min-width: 50%;
-    // position: absolute;
-    // z-index: 9999;
     background: #ffffff;
     box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
     border-radius: 2px;
@@ -131,7 +127,7 @@
     }
 
     &-popup {
-      z-index: 9999;
+      z-index: @modalZIndex + 100;
     }
 
     &-noData {
