--- a/src/Dropdown/index.less
+++ b/src/Dropdown/index.less
@@ -81,7 +81,6 @@
 
 .@{prefix}-Dropdown {
   position: absolute;
-  z-index: 9999;
   background: #ffffff;
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
   border-radius: 2px;
@@ -91,7 +90,7 @@
   overflow-y: auto;
 
   &-popup {
-    z-index: 9999;
+    z-index: @modalZIndex + 100;
   }
 
   &-item {
