--- a/src/Modal/index.less
+++ b/src/Modal/index.less
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  z-index: @modalZIndex;
 }
 
 .@{prefix}-modal {
