--- a/src/Tooltip/index.less
+++ b/src/Tooltip/index.less
@@ -113,7 +113,7 @@
   background: rgba(0, 0, 0, 0.75);
   box-shadow: @shadowdefault;
   display: none;
-  z-index: @modalZIndex;
+  z-index: @modalZIndex + 10;
 
   &-visible {
     display: block;
