--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -34,6 +34,15 @@
     width: 100%;
     height: 100%;
     z-index: 10;
+
+    input {
+      height: 100%;
+      outline: 0;
+      border: 0;
+      line-height: 30px;
+      font-size: 14px;
+      color: @textColor;
+    }
   }
 
   &-arrow {
@@ -84,6 +93,10 @@
   padding: 2px 0;
   max-height: 500px;
   overflow-y: auto;
+
+  &-all {
+    padding: 0 8px;
+  }
 
   &-popup {
     z-index: @modalZIndex + 100;
@@ -147,6 +160,7 @@
       .@{prefix}-tree-collapsed {
         margin-right: 0;
       }
+
       .@{prefix}-tree-checkbox {
         margin-left: 0px;
 
