--- a/src/DatePicker/index.less
+++ b/src/DatePicker/index.less
@@ -28,7 +28,13 @@
     display: flex;
   }
 
-  &-time-content {
+  &-time-picker {
+    width: auto;
+    min-width: 56px;
+    height: auto;
+  }
+
+  &-date-content {
     min-width: 244px;
     .@{prefix}-calendar-time-item {
     }
@@ -70,6 +76,61 @@
 
       &-content {
         width: 48px;
+      }
+    }
+  }
+
+  &-time-content {
+    min-width: 56px;
+
+    .@{prefix}-calendar-body {
+      padding: 0;
+    }
+
+    .@{prefix}-calendar-time {
+      display: flex;
+
+      &-cell {
+        text-align: center;
+        line-height: 28px;
+        display: inline-block;
+        width: 100%;
+        height: 28px;
+        font-size: 12px;
+        font-weight: 500;
+        color: #15171f;
+        cursor: pointer;
+
+        &:not(&-selected):hover {
+          background: @tableItemHoverBackgroundColor;
+        }
+      }
+
+      &-cell-selected {
+        background: @tableItemSelectBackgroundColor;
+      }
+    }
+
+    .@{prefix}-calendar-list {
+      flex: 1;
+      overflow-x: auto;
+      width: 56px;
+      height: 232px;
+
+      &:not(:last-child) {
+        border-right: 1px solid #f0f1f5;
+      }
+
+      ul {
+        display: block;
+        width: 100%;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 204px;
+        }
       }
     }
   }
@@ -183,14 +244,27 @@
         width: 24px;
         height: 24px;
         line-height: 24px;
+      }
 
+      // 不可选择日期
+      &-disabled {
+        color: #d0d1d9;
+        cursor: no-drop;
+      }
+
+      &-disabled &-date {
+        cursor: no-drop;
+      }
+
+      &:not(&-disabled) &-content {
         &:hover {
           border-radius: 2px;
           background: @tableItemHoverBackgroundColor;
         }
       }
 
-      &-checked &-content {
+      &&-checked &-content,
+      & &-checked &-content {
         border-radius: 2px;
         background: @primaryColor;
         color: #ffffff;
@@ -236,11 +310,13 @@
           background: #adc5ff;
         }
 
-        .@{prefix}-calendar-time-item-content:hover {
+        &.@{prefix}-calendar-time-item .@{prefix}-calendar-time-item-content:hover {
           background: #adc5ff;
         }
 
-        .@{prefix}-calendar-time-item-checked .@{prefix}-calendar-time-item-content {
+        &.@{prefix}-calendar-time-item
+          .@{prefix}-calendar-time-item-checked
+          .@{prefix}-calendar-time-item-content {
           background: @primaryColor;
         }
       }
@@ -248,5 +324,28 @@
   }
 
   &-footer {
+    &-time {
+      display: flex;
+      height: 52px;
+      justify-content: space-between;
+      align-items: center;
+      border-top: 1px solid #f0f1f5;
+      padding: 0 16px 0 0;
+    }
   }
+}
+
+/*控制整个滚动条*/
+::-webkit-scrollbar {
+  width: 0;
+  height: 8px;
+  background-color: #00000010;
+  border-radius: 8px;
+}
+
+/*滚动条中间滑动部分*/
+::-webkit-scrollbar-thumb {
+  background-color: #00000020;
+  border-radius: 8px;
+  width: 0;
 }
